ContactLogServiceImpl refatorado — imutável, sem update, builder para criação