@@ -1,207 +1,98 @@
 package io.sertaoBit.odontocore.crm.modules.funnel.service.impl;
 
+import io.sertaoBit.odontocore.crm.config.security.SecurityUtils;
+import io.sertaoBit.odontocore.crm.exception.ResourceNotFoundException;
 import io.sertaoBit.odontocore.crm.modules.funnel.api.dto.request.contactLog.ContactLogCreateRequestDTO;
-import io.sertaoBit.odontocore.crm.modules.funnel.domain.enums.ContactChannel;
+import io.sertaoBit.odontocore.crm.modules.funnel.api.dto.response.ContactLogResponseDTO;
 import io.sertaoBit.odontocore.crm.modules.funnel.domain.model.ContactLog;
-import io.sertaoBit.odontocore.crm.modules.funnel.domain.model.Customer;
 import io.sertaoBit.odontocore.crm.modules.funnel.domain.model.LeadTicket;
 import io.sertaoBit.odontocore.crm.modules.funnel.mapper.ContactLogMapper;
 import io.sertaoBit.odontocore.crm.modules.funnel.repository.ContactLogRepository;
-import io.sertaoBit.odontocore.crm.modules.funnel.repository.CustomerRepository;
 import io.sertaoBit.odontocore.crm.modules.funnel.repository.LeadTicketRepository;
 import io.sertaoBit.odontocore.crm.modules.funnel.service.ContactLogService;
-import io.sertaoBit.odontocore.crm.modules.identity.domain.model.User;
-import io.sertaoBit.odontocore.crm.modules.identity.repository.UserRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.time.LocalDate;
-import java.time.chrono.ChronoLocalDateTime;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 public class ContactLogServiceImpl implements ContactLogService {
 
     private final ContactLogRepository contactLogRepository;
     private final ContactLogMapper contactLogMapper;
-    private final CustomerRepository customerRepository;
     private final LeadTicketRepository ticketRepository;
-    private final UserRepository userRepository;
+    private final SecurityUtils securityUtils;
 
     public ContactLogServiceImpl(
             ContactLogRepository contactLogRepository,
             ContactLogMapper contactLogMapper,
-            CustomerRepository customerRepository,
             LeadTicketRepository ticketRepository,
-            UserRepository userRepository
+            SecurityUtils securityUtils
     ) {
         this.contactLogRepository = contactLogRepository;
         this.contactLogMapper = contactLogMapper;
-        this.customerRepository = customerRepository;
         this.ticketRepository = ticketRepository;
-        this.userRepository = userRepository;
+        this.securityUtils = securityUtils;
+
     }
 
     @Override
     @Transactional
     public ContactLogResponseDTO create(ContactLogCreateRequestDTO dto) {
-        Objects.requireNonNull(dto.customer(), "Customer must not be null");
-        Objects.requireNonNull(dto.customer(), "Customer id must not be null");
+        LeadTicket ticket = ticketRepository.findById(dto.ticketId())
+                .orElseThrow(() -> new ResourceNotFoundException("Ticket not foud"));
 
-        Customer customer = customerRepository.findById(dto.customer())
-                .orElseThrow(() -> new RuntimeException("Customer not found by id: " + dto.customer()));
+        var userId = securityUtils.getCurrentUserId();
 
-        LeadTicket leadTicket = null;
-        if (dto.ticket() != null ) {
-            leadTicket = ticketRepository.findById(dto.ticket())
-                    .orElseThrow(() -> new RuntimeException("Ticket not found by id: " + dto.ticket()));
-
-            if (!leadTicket.getCustomer().getId().equals(customer.getId())) {
-                throw new RuntimeException("Ticket does not belong to this Customer");
-            }
-        }
-
-        User contactBy = userRepository.findById(dto.contactBy())
-                .orElseThrow(() -> new RuntimeException("User not found by id: " + dto.contactBy()));
-
-        ContactLog contactLog = contactLogMapper.toEntity(dto);
-
-        contactLog.setCustomer(customer);
-        contactLog.setLeadTicket(leadTicket);
-        contactLog.setContactBy(contactBy);
+        ContactLog contactLog = ContactLog.builder()
+                .ticketId(dto.ticketId())
+                .userId(userId)
+                .channel(dto.channel())
+                .note(dto.note())
+                .statusBefore(ticket.getStatus())
+                .occurredAt(dto.occurredAt())
+                .build();
 
         return contactLogMapper.toResponseDTO(contactLogRepository.save(contactLog));
-    }
 
-    @Override
-    @Transactional
-    public ContactLogResponseDTO update(UUID id, ContactLogUpdateRequestDTO dto) {
-        ContactLog contactLog = contactLogRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("ContactLog not found by id: " + id));
-
-        if (dto.description() != null && !dto.description().isBlank()) {
-            contactLog.setDescription(dto.description());
-        }
-
-        if (dto.contactOutcome() != null) {
-            contactLog.setContactOutcome(dto.contactOutcome());
-        }
-
-        if (dto.nextFollowUp() != null) {
-            contactLog.setNextFollowUp(dto.nextFollowUp());
-        }
-
-        if (dto.investmentAmount() != null) {
-            contactLog.setInvestmentAmount(dto.investmentAmount());
-        }
-
-        if (dto.conversionValue() != null) {
-            contactLog.setConversionValue(dto.conversionValue());
-        }
-
-        return contactLogMapper.toResponseDTO(contactLogRepository.save(contactLog));
     }
 
     @Override
     @Transactional(readOnly = true)
     public ContactLogResponseDTO findById(UUID id) {
+        Objects.requireNonNull(id);
         return contactLogRepository.findById(id)
                 .map(contactLogMapper::toResponseDTO)
-                .orElseThrow(() -> new RuntimeException("ContactLog not found by id: " + id));
+                .orElseThrow(() -> new ResourceNotFoundException("Contact Log not found"));
     }
-
 
     @Override
     @Transactional(readOnly = true)
     public List<ContactLogResponseDTO> findAll() {
         return contactLogRepository.findAll().stream()
                 .map(contactLogMapper::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
     @Override
     @Transactional(readOnly = true)
-    public List<ContactLogResponseDTO> findByCustomer(UUID id) {
-        Objects.requireNonNull(id, "Customer id must not be null");
-
-        return contactLogRepository.findByCustomerId(id).stream()
-                .filter(cl -> cl.getCustomer().getId().equals(id))
+    public List<ContactLogResponseDTO> findByTicketId(UUID ticketId) {
+        Objects.requireNonNull(ticketId);
+        return contactLogRepository.findByTicketId(ticketId).stream()
                 .map(contactLogMapper::toResponseDTO)
-                .collect(Collectors.toList());
-
-    }
-
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<ContactLogResponseDTO> findByContactByUser(UUID id) {
-        Objects.requireNonNull(id, "Contact id must not be null");
-
-        return contactLogRepository.findAll().stream()
-                .filter(cl -> cl.getContactBy().getId().equals(id))
-                .map(contactLogMapper::toResponseDTO)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<ContactLogResponseDTO> findByChannel(ContactChannel channel) {
-        Objects.requireNonNull(channel, "Channel must not be null");
-
-        return contactLogRepository.findByContactChannel(channel).stream()
-                .filter(cl -> cl.getContactChannel().equals(channel))
-                .map(contactLogMapper::toResponseDTO)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<ContactLogResponseDTO> findOutcome(ContactOutcome contactOutcome) {
-        return contactLogRepository.findByContactOutcomes(contactOutcome).stream()
-                .filter(cl -> cl.getContactOutcome() == contactOutcome)
-                .map(contactLogMapper::toResponseDTO)
-                .collect(Collectors.toList());
-    }
-
-
-    @Override
-    @Transactional(readOnly = true)
-    public List<ContactLogResponseDTO> findByDateRange(LocalDate start, LocalDate end) {
-        return contactLogRepository.findAll().stream()
-                .filter(cl -> cl.getContactDate() != null
-                        && cl.getContactDate().isAfter(ChronoLocalDateTime.from(start))
-                        && cl.getContactDate().isBefore(ChronoLocalDateTime.from(end)))
-                .map(contactLogMapper::toResponseDTO)
-                .collect(Collectors.toList());
-    }
-
-    /**
-     * Retorna TODOS os contactos com follow-up pendente.
-     * <p>
-     * Follow-up é pendente quando:
-     * - nextFollowUp != null
-     * - nextFollowUp <= hoje
-     */
-    @Override
-    @Transactional(readOnly = true)
-    public List<ContactLogResponseDTO> findWithPendingFollowUp() {
-        return contactLogRepository.findAll().stream()
-                .filter(cl -> cl.getNextFollowUp() != null
-                        && !cl.getNextFollowUp().isAfter(java.time.LocalDate.now()))
-                .map(contactLogMapper::toResponseDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 
     @Override
     @Transactional
     public void delete(UUID id) {
+        Objects.requireNonNull(id);
         if (!contactLogRepository.existsById(id)) {
-            throw new RuntimeException("ContactLog not found by id: " + id);
+            throw new ResourceNotFoundException("ContactLog not found by id: " + id);
         }
         contactLogRepository.deleteById(id);
     }
